--- a/writeup/refs.bib
+++ b/writeup/refs.bib
@@ -568,3 +568,29 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2015arXiv150101341P,
+   author = {{Pen}, U.-L. and {Connor}, L.},
+    title = "{Local Circumnuclear Magnetar Solution to Extragalactic Fast Radio Bursts}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1501.01341},
+ primaryClass = "astro-ph.HE",
+ keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+     year = 2015,
+    month = jan,
+   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150101341P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1976ApJ...203..297S,
+   author = {{Schechter}, P.},
+    title = "{An analytic expression for the luminosity function for galaxies.}",
+  journal = {\apj},
+     year = 1976,
+    month = jan,
+   volume = 203,
+    pages = {297-306},
+      doi = {10.1086/154079},
+   adsurl = {http://adsabs.harvard.edu/abs/1976ApJ...203..297S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
