--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -1,4 +1,4 @@
-\documentclass[twocolumn,prl,nofootinbib]{revtex4-1}
+\documentclass[twocolumn,prl,nofootinbib,floatfix]{revtex4-1}
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -90,35 +90,38 @@ Columbia, Vancouver, BC, Canada, V6T 1Z1}
 \section{Introduction}
 
 The clustering of matter on large scales has been
-heralded as the next great probe the Universe after the cosmic microwave
+heralded as the next great probe of the Universe after the cosmic microwave
 background (CMB). The large-scale structure in principle contains far more
-information than the CMB, because it can be studied in three dimensions.
-Traditionally the redshift of spectral lines caused by the Hubble flow has
-been employed to measure radial distance. Such redshift
+information than the CMB because it can be studied in three dimensions.
+Traditionally the redshift of spectral lines, caused by the Hubble flow, has
+been employed to measure radial distance and provide the third dimension.
+Such redshift
 surveys have now aggregated the positions of millions of galaxies into three
 dimensional density maps, exposing a rich structure of clusters, filaments,
 walls and voids.
 
-% This paragraph needs to be reorganized.
 However, redshift is not the only measure of radial distance. In particular,
 dispersion of electromagnetic signals due to intervening plasma
 is readily measured from fast radio bursts (FRB) which are a class
 of radio transient first reported in \citet{2007Sci...318..777L}.
 There have since been 
-10 such bursts reported \citep{2012MNRAS.425L..71K,2013Sci...341...53T, 2014ApJ...790..101S, 2014ApJ...792...19B, 2015MNRAS.447..246P,2015ApJ...799L...5R} and total rate of bursts
+10 such bursts reported
+\citep{2012MNRAS.425L..71K,2013Sci...341...53T,
+2014ApJ...790..101S, 2014ApJ...792...19B, 
+2015MNRAS.447..246P,2015ApJ...799L...5R} and total rate of bursts
 been estimated to be $3.3^{+5}_{-2.5} \times 10^3$
 per sky per day \cite{2015arXiv150500834R}. 
 The dispersion measure
 (DM) is a line-of-site integral of the free electron density and can thus be
-used as a distance estimate, as is routinely done for galactic pulsars.
+used as a distance estimate, as is routinely done with galactic pulsars.
 Because FRBs are observed to have dispersion measures greatly in excess of
 the galactic expectation they must be of extra-galactic origin, with their
 dispersion produced either by
 inter-galactic medium (IGM) \citep{2013Sci...341...53T} or the
 environment of the source
 \citep{2014ApJ...785L..26L,2015arXiv150101341P}.
-If the dispersion is dominated by the inter-galactic medium, then 
- then the average DM-distance relation can be modelled
+If the dispersion is dominated by the inter-galactic medium, then
+then the average DM-distance relation can be modelled
 \citep{2004MNRAS.348..999I, 2003ApJ...598L..79I} and the sources are at
 cosmological distances of a few gigaparsecs. This would permit
 the study of the clustering of FRBs in three dimensions which should trace the
@@ -126,7 +129,7 @@ large-scale structure of the Universe on linear scales.
 
 Neither redshift nor dispersion measure are perfect proxies for radial distance.
 Redshifts are systematically biased by the peculiar velocities of the object
-relative to the Hubble flow. This leads to additional apparent clustering 
+relative to the Hubble flow. This leads to additional apparent clustering
 in redshift
 space which was first calculated by \citet{1987MNRAS.227....1K}
 using linear theory.
@@ -134,7 +137,7 @@ Similarly, distance estimates from dispersion measure will be biased by
 inhomogeneities in the electron density \citep{2014ApJ...780L..33M},
 again leading to additional apparent
 clustering of sources in dispersion measure space.  In this letter we calculate
-these DM space distortions and consider the detectability of the signal by
+these DM-space distortions and consider the detectability of the signal by
 upcoming surveys.
 
 
@@ -164,7 +167,7 @@ measure is thus
 
 \emph{Dispersion measure space} is the three dimensional coordinates,
 $\vec x_s$ inferred from the dispersion measure assuming that the electrons are
-homogenious. This only affect the radial coordinate such that $\vec x_s = \hat
+homogeneous. This only affect the radial coordinate such that $\vec x_s = \hat
 n \chi_s$ with $\chi_s$ defined by the equation
 \begin{equation}
     {\rm DM}(\chi_s) = \int_0^\chi \ud\chi' a(\chi')^2 \bar{n}_e(\chi').
@@ -194,8 +197,8 @@ We split the density into a homogeneous part plus perturbations,
     \bar{n}_{fs}(\chi_s)\left[ 1 + \delta_{fs}(\vec x_s)\right] \ud^3\vec x_s
     = \bar{n}_{f}(\chi)\left[ 1 + \delta_f(\vec x)\right] \ud^3\vec x.
 \end{equation}
-Averaged over the sky, the density should be the same in DM 
-space as in real space,
+Averaged over the sky, $\langle \chi_s \rangle = \chi$ and thus `the density should
+be the same in DM space as in real space,
 \begin{equation}
 \bar{n}_{fs}(\chi) = \bar{n}_f(\chi).
 \end{equation}
@@ -204,7 +207,8 @@ Therefore,
 \bar{n}_{fs}(\chi_s) 
     &= \bar{n}_{f}(\chi) + (\chi_s - \chi)\frac{\ud \bar{n}_f}{\ud \chi}\\
     &= \bar{n}_{f}(\chi)
-       + \frac{\ud \bar{n}_f}{\ud \chi}\int_0^\chi \ud \chi' \delta_e(\hat n \chi')
+       + \frac{\ud \bar{n}_f}{\ud \chi}\int_0^\chi \ud \chi' \delta_e(\hat n
+       \chi').
        \label{e:nfs}
 \end{align}
 
@@ -216,7 +220,7 @@ The Jacobian in spherical coordinates is
        \left(1 + \frac{\int_0^\chi \ud \chi' \delta_e(\hat n \chi')}
                       {\chi}\right)^{-2}\\
     &\approx 1 - \delta_e
-        - \frac{2}{\chi}\int_0^\chi \ud \chi' \delta_e(\hat n \chi')
+        - \frac{2}{\chi}\int_0^\chi \ud \chi' \delta_e(\hat n \chi').
         \label{e:jac}
 \end{align}
 
@@ -241,7 +245,8 @@ The $\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi}$ arise since the
 misinterpretation of the radial distance causes the observed tracer density to
 be compared to the wrong background density. The $\frac{2}{\chi}$ term is
 caused by a misinterpretation of angular distances when the radial distance is
-mis measured.  Both terms are in-principle present in redshift space but are
+mismeasured.  In both cases analogous terms are in principle present in 
+redshift space but are
 negligible. Because radial velocities are only sourced by modes with large
 radial wave vector, there is near perfect cancellation along the line of sight
 and thus is very little net error in radial distance.
@@ -258,13 +263,13 @@ term as
 %\section{Two-point statistics}
 
 Large-scale structure is usually studied through its two-point statistics, most
-commonly the power-spectrum, $P(k)$.
+commonly the power spectrum, $P(k)$.
 Unlike in redshift-space distortions, Equation~\ref{e:delta_s} does not have a
 simple form in harmonic space. The equation's third term couples harmonic modes
 and thus the two-point statistics cannot be phrased as a simple power spectrum.
 We will instead use $C^{ss}_\ell(\chi,\chi')$, which is
-the cross-correlation angular power-spectrum of the DM space over-density,
-on shells at $\chi$ and $\chi'$.
+the cross-correlation angular power spectrum of the DM-space over density,
+on shells at $\chi$ and $\chi'$:
 \begin{align}
     &\delta_{\ell\ell'}\delta_{mm'}C^{ss}_\ell(\chi, \chi') = \nonumber \\
     & \quad
@@ -273,13 +278,13 @@ on shells at $\chi$ and $\chi'$.
        \delta_{fs}(\hat n \chi, \chi)
         \int\ud\Omega' Y_{\ell' m'}(\hat n')
         \delta_{fs}(\hat n' \chi', \chi')
-        \right\rangle
+        \right\rangle.
 \end{align}
 The first two term in Equation~\ref{e:delta_s} are stationary. For stationary,
 isotropic, tracers $x$ and $y$ we have 
 $\langle \delta_x(\vec k, \chi) \delta_y(\vec k', \chi) \rangle = (2\pi)^3
 \delta^3(\vec k - \vec k') P_{xy}(k, \chi)$.  If for a moment we ignore time
-dependance, the angular cross power spectrum of such tracers is
+dependence, the angular cross-power spectrum of such tracers is
 \begin{align}
     %\delta_{\ell\ell'}\delta_{mm'}C^{xy}_\ell(\chi, \chi')
     %&= \int\ud\Omega\ud\Omega'Y_{\ell m}(\hat n) Y_{\ell' m'}(\hat n')
@@ -290,10 +295,10 @@ dependance, the angular cross power spectrum of such tracers is
 \int_0^\infty\ud k k^2 j_\ell(k\chi) j_{\ell}(k\chi')P_{xy}(k).
 \end{align}
 In reality the power spectrum evolves on the order of a Hubble time.
-The angular cross-correlations will be very small unless $\chi$ and $\chi'$ are
-within a few correlation lengths of one another, roughly a few hundred
+The angular cross correlations will be very small unless $\chi$ and $\chi'$ are
+within a few correlation lengths of one another, roughly a hundred
 megaparsecs.  The evolution of the power-spectrum is negligible over these time
-differences which leads to a straight forward way to include the evolution of
+differences which leads to a straight-forward way to include the evolution of
 the perturbations:
 \begin{align}
 C^{xy}_\ell(\chi,\chi') 
@@ -304,7 +309,7 @@ C^{xy}_\ell(\chi,\chi')
     |\chi - \chi'| \ll 1/aH.&
 \end{align}
 
-The thrid term in Equation~\ref{e:delta_s} is not stationary but is an integral
+The third term in Equation~\ref{e:delta_s} is not stationary but is an integral
 over the stationary field $\delta_e$.
 Define $\delta_d$ as
 \begin{equation}
@@ -425,61 +430,61 @@ and $\chi_{\max} \equiv \max(\chi,
 \gtrsim 10$
 and use this form for the remainder of the paper. In the above equation we dub
 the three terms the `local', `integral' and `cross' terms respectively and will
-refer to them as such for the remainder of this work.
+refer to them as such henceforth.
 
 
-\section{Modeling and measurement}
+\section{Modelling and measurement}
 
 There are a number of effects that will complicate the measurement of the
 above calculated angular power spectrum by a real survey of dispersion 
-measures.  The first is
+measures.  The first effect is
 that the model that the free electron density decomposes into a homogeneous
-part plus a random field of perturbations is not correct. Firstly, all signals
-must pass through the Milky Way's galactic disk, halo and local environment
-which will contribute to the dispersion measure. However, this is only a 
+part plus a random field of perturbations is not complete. Firstly, all signals
+must pass through the Milky Way's galactic disk, halo, and local environment,
+which will contribute to the dispersion measure. However, this is only a
 single function of $\hat n$  which can presumably be well
-measured. In addition, this function could in principal be well characterized
+measured. In addition, this function could in principle be well characterized
 by independent data such as observations of pulsars.  As such, it should be
 possible to subtract the local
 contribution, as was done in
 \citet{2014arXiv1412.4829D}, and this is unlikely to be a limiting obstacle.
 
-More concerning is the dispersion from the burst progenitor's environment
+More concerning is the dispersion from the source's environment
 as well as the halo in which it resides. These electrons will presumably be
-clustered around the burst progenitor on scales far smaller than DM-space
-structure maps and thus are not accounted for in the $\delta_e$--$\delta_f$
+clustered around the source on scales far smaller than DM-space
+structure map pixels and thus are not accounted for in the $\delta_e$--$\delta_f$
 correlations included in the above formalism.  This will have a mean
-contribution, common to all bursts and which may be epoch dependant, which will
+contribution, common to all sources and which may be epoch dependant, which will
 modify the mean DM--distance relation. This will need to be calibrated in some
 why or else fit with nuisance parameters during parameter estimation.  There
-will also be a stochastic piece which varies from burst to burst.  This will
+will also be a stochastic piece which varies from source to source.  This will
 limit the precision at which $\chi_s$ can be measured, thus limiting the
 resolution of DM space density maps in the radial direction.
 
 Detailed treatment of these complications is beyond the scope of the current
 work. The magnitude of the contribution from the progenitor is at present
-unconstrained by data. To crudely deal with it here we use relatively large 
+unknown. To crudely deal with it here we use relatively large 
 $\chi$ bins of $100\,{\rm MPc}/h$ in sensitivity estimates.
 
 The second term in Equation~\ref{e:Clss_limber} is an integral that mixes
-many spacial scales, small scales from smaller radial distance and larger
+many spatial scales, small scales from smaller radial distance and larger
 scales from greater distances. The mixing of scales complicates the
 interpretation of measurements, since structure formation on scales smaller
 than $\sim10\,{\rm MPc}/h$ is non-linear and hard to model. A similar issue
 exists in the field of weak gravitational lensing, where the formula for the
-angular power spectrum has a similar form.  However in lensing a kernel in
+angular power spectrum has a similar form.  In lensing a kernel in
 the line-of-sight integral, arising from geometric effects, suppresses the
 contribution from small distances, partially alleviating the issue.
 
 There is an advantage to the lack of kernel in the DM-space integral term.
 Lensing tomography---the use of sources at multiple redshifts to unmix
 spatial scales---is complicated by the kernel. The kernel's shape depends on
-the source redshift, reweighting the line of sight and
-making tomography inexact.  In contrast the integrand in the integral
+the source redshift, reweighting the line of sight integral and
+making tomography inexact.  In contrast the integrand in the DM-space integral
 term is completely independent of the limit of integration, meaning
 contributions from different parts of the line of sight (and thus different
 spatial scales) can be separated exactly. Again, a detailed study of DM space
-tomography is beyond the scope of this work.  The avoid our results being
+tomography is beyond the scope of this work.  To avoid our results being
 sensitive to the hard-to-model small scales, we assume that the contribution to the
 integral term from radial distances $\chi'' < 500\,{\rm MPc}/h$ are well
 measured by the correlations with these radial slices. We thus neglect the
@@ -488,12 +493,12 @@ contributions to the integral term from below this distance. The smallest
 spatial scale that contributes the our plotted angular power spectra out to
 $\ell=1000$ is thus $k=2\,h/{\rm MPc}$.
 
-For plotting the DM space power-spectra we use a toy model for the electron and
-FRB clustering that assumes both are biased tracers of the dark matter,
+For plotting the DM-space power spectra we use a toy model for the electron and
+FRB clustering that assumes both are biased tracers of the dark matter:
 \emph{i.e.}~$P_{xy}(k)=b_x b_y P(k)$.  We
-calculate the time dependant dark matter power-spectrum using {\tt CAMB} using
+calculate the time dependant dark-matter power spectrum using {\tt CAMB} using
 the integrated {\tt HALOFIT} to approximate the non-linear evolution. We assume
-that the electron bias $b_e=1$, which should be true on large scales due to
+that the electron bias is $b_e=1$, which should be true on large scales due to
 approximate conservation of free electrons. The bias of FRB sources is
 unconstrained by data and we choose it to be $b_f=1.3$. The coefficient
 $A(\chi)$ depends on the density of detected FRB sources, $\bar n_f(\chi)$.
@@ -501,7 +506,7 @@ We use a simple model where all events above a fixed flux are detected,
 the intrinsic luminosity function has the
 \citet{1976ApJ...203..297S} form with index $-1$, and events at the cut off of the
 luminosity function and at
-a radial distance of $\chi=2350\,{\rm MPc}/h$ are at the detection threshold.
+a radial distance of $\chi=2350\,{\rm MPc}/h$ are at the flux detection threshold.
 This source density is shown in Figure~\ref{f:n_f} with the resulting DM-space
 power-spectrum in Figure~\ref{f:terms}.
 
@@ -579,7 +584,7 @@ in Figure~\ref{f:sensitivity}.
 
 \section{Discussion and conclusions}
 
-I can be seen in Figure~\ref{f:terms} that the integral term dominates the
+It can be seen in Figure~\ref{f:terms} that the integral term dominates the
 cross term and the local term except at small radial separations.  We've found
 that this is generically true for most $(\chi, \chi')$ pairs and that the
 sensitivity shown in Figure~\ref{f:sensitivity} is dominated by the integral
@@ -589,17 +594,18 @@ potentially solve the `missing baryon problem' as pointed out in
 \citet{2014ApJ...780L..33M}.
 
 We have calculated the clustering of sources in dispersion measure space and
-shown that a survey detecting a modest $10^4$ fast radio bursts of cosmological
-origin could detect the clustering signal.
-
+shown that a survey detecting $10^4$ fast radio bursts of cosmological
+origin (as might be achieved by the CHIME FRB instrument) could detect the
+clustering signal.
 Looking forward, DM-space
 clustering could become a powerful probe of large-scale structure should
 observational factors turn out to be favourable compared to spectroscopic
 surveys. The baryon acoustic oscillation feature can be clearly seen in
 Figure~\ref{f:terms} in the cross term and both
-local-term curves. It might even be possible to extract it from the integral
+local-term curves. It may also be possible to extract the BAO feature
+from the integral
 term using tomography.
-This however depends on the contribution to dispersion measure from
+This however requires that the contribution to dispersion measure from
 the source's environment and host halo to be modest compared to the
 contribution from the IGM.
 
